--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -9,7 +9,7 @@
 .search-box-parent{
 	/* background: var(--main); */
 	border-radius: 50px;
-	box-shadow: 2px 5px 40px 0 rgba(0,0,0,.09);
+/* 	box-shadow: 2px 5px 40px 0 rgba(0,0,0,.09); */
 }
 
 .bg-blur{
