--- a/src/main/resources/templates/alert/del_modal.html
+++ b/src/main/resources/templates/alert/del_modal.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <!-- DEL Modal -->
 <div class="modal fade" id="feed_del_Modal" tabindex="-1"
 	aria-labelledby="feed_del_ModalLabel" aria-hidden="true">
@@ -12,8 +14,9 @@
 				<button type="button"
 					class="btn btn-light text-dark rounded-pill px-3"
 					data-bs-dismiss="modal">취소</button>
-				<button type="button" class="btn btn-main rounded-pill px-3" th:fragment="modalButton">삭제</button>
+				<button class="btn btn-main rounded-pill px-3" onClick="func_delModalBtn()">삭제</button>
 			</div>
 		</div>
 	</div>
 </div>
+</html>
