--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -5,7 +5,6 @@
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
-
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<!-- 토스트 -->
@@ -13,10 +12,10 @@
 
 	<!-- 삭제 모달 -->
 	<div th:replace="~{alert/del_modal::div}">
-		<div th:fragment="modalButton">
-			<a class="dropdown-item active"
-				th:href="@{'/delFeed?num=' + ${feed.Feed_num}}">삭제</a>
-		</div>
+<!-- 		<a th:include="~{alert/del_modal::modalLink}"
+			class="dropdown-item active"
+			th:href="@{'/delFeed?num=' + ${feed.Feed_num}}">삭제
+		</a> -->
 	</div>
 
 	<div id="feed" class="container-fluid mt-4 mb-5">
@@ -214,6 +213,9 @@
 				<!--feed box Start-->
 				<div class="col feed-box m-0 my-3 px-0 no-gutters"
 					th:each="feed : ${feedList}">
+						<form action="/delFeed" id="deleteFeedForm">
+							<input type="hidden" name="num" th:value="${feed.Feed_num}" />
+						</form>
 					<!--feed box top-->
 					<div class="col-12 hstack feed-box-top py-3 px-3 z-3">
 						<img
@@ -225,26 +227,29 @@
 							<span class="float-start fw-bold f15" th:text="${feed.Member_Id}">박검지</span><br>
 							<span class="float-start text-muted f13">하이라이트</span>
 							<span class="float-start text-muted f13 ms-3 recentSort" th:text="${feed.getFeed_updateday()}"></span>
-
-
 						</div>
 						<!-- 우측 버튼 -->
 						<div class="col-3 d-flex justify-content-end align-items-center">
 							<a th:href="@{'/feed_show?num='+${feed.Feed_num}}"
 								class="btn btn-sm btn-dark"> 전체 </a>
 							<!-- 수정 및 삭제 버튼  -->
-							<div th:if="${session.Member_Id==feed.Member_Id}">
+							<div th:if="${session.Member_Id==feed.Member_Id or session.Member_Id=='admin'}">
 								<div class="f17 hstack" id="feed-right">
 									<a
 										class="dropdown-toggle text-center m-0 ps-2 pt-1 d-block d-flex justify-content-end"
 										href="#" role="button" id="dropdownMenuLink"
 										data-bs-toggle="dropdown" aria-expanded="false"><i
-										class="fi fi-rr-menu-dots-vertical"></i> </a>
+										class="fi fi-rr-menu-dots-vertical"></i>
+									</a>
 									<ul class="dropdown-menu dropdown-menu-dark">
-										<li data-bs-toggle="modal" data-bs-target="#feed_del_Modal"><a
-											class="dropdown-item">삭제</a></li>
-										<li><a class="dropdown-item"
-											th:href="@{'/feed_update?num='+${feed.Feed_num}}">수정</a></li>
+										<li data-bs-toggle="modal" data-bs-target="#feed_del_Modal">
+											<a
+											class="dropdown-item">삭제</a>
+										</li>
+										<li th:if="${session.Member_Id==feed.Member_Id}">
+											<a class="dropdown-item" 
+												th:href="@{'/feed_update?num='+${feed.getFeed_num()}}">수정</a>
+										</li>
 									</ul>
 								</div>
 							</div>
@@ -441,7 +446,12 @@
 	        });
 	    });
 	</script>
-
-
+	
+	<script>
+		function func_delModalBtn(){
+	        document.getElementById('deleteFeedForm').submit();
+	     }
+	</script>
+	
 </body>
 </html>
