--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -145,66 +145,93 @@
       }
    </script>
 <script th:inline="javascript">
-	var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
-    	var mapx = /*[[${aicc.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
-		var mapy = /*[[${aicc.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
-    	var mapx2 = /*[[${aicc2.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
-		var mapy2 = /*[[${aicc2.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
-    	var mapx3 = /*[[${aiccCafe.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
-		var mapy3 = /*[[${aiccCafe.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
-    	var mapx4 = /*[[${aiccFood.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
-		var mapy4 = /*[[${aiccFood.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
-    	var mapx5 = /*[[${aiccFood2.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
-		var mapy5 = /*[[${aiccFood2.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
-    	var name = /*[[${aicc.get(0).getEvent_name()}]]*/""; // 이벤트의 위도 값
-		var name2 = /*[[${aiccFood.get(0).getEvent_name()}]]*/""; // 이벤트의 경도 값
-		var name3 = /*[[${aicc2.get(0).getEvent_name()}]]*/""; // 이벤트의 경도 값
-		var name4 = /*[[${aiccCafe.get(0).getEvent_name()}]]*/""; // 이벤트의 경도 값
-		var name5 =  /*[[${aiccFood2.get(0).getEvent_name()}]]*/""; // 이벤트의 경도 값
-		// 문자열로 가져온 값을 parseFloat 함수를 사용하여 숫자로 변환
-		mapx = parseFloat(mapx);
-		mapy = parseFloat(mapy);
+   var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
+       var aiccmapx = /*[[${aicc.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
+      var aiccmapy = /*[[${aicc.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
+       var aicc2mapx = /*[[${aicc2.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
+      var aicc2mapy = /*[[${aicc2.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
+       var aiccCafemapx = /*[[${aiccCafe.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
+      var aiccCafemapy = /*[[${aiccCafe.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
+       var aiccFoodmapx = /*[[${aiccFood.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
+      var aiccFoodmapy = /*[[${aiccFood.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
+       var aiccFood2mapx = /*[[${aiccFood2.get(0).getEvent_mapX()}]]*/0; // 이벤트의 위도 값
+      var aiccFood2mapy = /*[[${aiccFood2.get(0).getEvent_mapY()}]]*/0; // 이벤트의 경도 값
+       
+      var aiccname = /*[[${aicc.get(0).getEvent_name()}]]*/""; // 이벤트의 네임 값
+      var aicc2name = /*[[${aicc2.get(0).getEvent_name()}]]*/""; // 이벤트의 네임 값
+      var aiccCafename = /*[[${aiccCafe.get(0).getEvent_name()}]]*/""; // 이벤트의 네임 값
+      var aiccFoodname = /*[[${aiccFood.get(0).getEvent_name()}]]*/""; // 이벤트의 네임 값
+      var aiccFood2name =  /*[[${aiccFood2.get(0).getEvent_name()}]]*/""; // 이벤트의 네임 값
+     
+      var aiccnum = /*[[${aicc.get(0).getEvent_num()}]]*/""; // 이벤트의 넘버 값
+      var aicc2num = /*[[${aicc2.get(0).getEvent_num()}]]*/""; // 이벤트의 넘버 값
+      var aiccCafenum = /*[[${aiccCafe.get(0).getEvent_num()}]]*/""; // 이벤트의 넘버 값
+      var aiccFoodnum = /*[[${aiccFood.get(0).getEvent_num()}]]*/""; // 이벤트의 넘버 값
+      var aiccFood2num =  /*[[${aiccFood2.get(0).getEvent_num()}]]*/""; // 이벤트의 넘버 값
+      // 문자열로 가져온 값을 parseFloat 함수를 사용하여 숫자로 변환
+      mapx = parseFloat(aicc2mapx);
+      mapy = parseFloat(aicc2mapy);
             mapOption = { 
                 center: new kakao.maps.LatLng(mapx, mapy), // 지도의 중심좌표
-                level: 5 // 지도의 확대 레벨
+                level: 6 // 지도의 확대 레벨
             };
         
             var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-            
          // 마커를 표시할 위치와 title 객체 배열입니다 
          var positions = [
              {
-                 title: name, 
-                 latlng: new kakao.maps.LatLng(mapx, mapy)
+                 title: aiccname, 
+                 number: aiccnum,
+                 latlng: new kakao.maps.LatLng(aiccmapx, aiccmapy)
              },
              {
-                 title: name2, 
-                 latlng: new kakao.maps.LatLng(mapx4, mapy4)
+                 title: aiccFoodname, 
+                 number: aiccFoodnum,
+                 latlng: new kakao.maps.LatLng(aiccFoodmapx, aiccFoodmapy)
              },
              {
-                 title: name3, 
-                 latlng: new kakao.maps.LatLng(mapx2, mapy2)
+                 title: aicc2name, 
+                 number: aicc2num,
+                 latlng: new kakao.maps.LatLng(aicc2mapx, aicc2mapy)
              },
              {
-                 title: name4,
-                 latlng: new kakao.maps.LatLng(mapx3, mapy3)
+                 title: aiccCafename,
+                 number: aiccCafenum,
+                 latlng: new kakao.maps.LatLng(aiccCafemapx, aiccCafemapy)
              },
              {
-                 title: name5,
-                 latlng: new kakao.maps.LatLng(mapx5, mapy5)
+                 title: aiccFood2name,
+                 number: aiccFood2num,
+                 latlng: new kakao.maps.LatLng(aiccFood2mapx, aiccFood2mapy)
              }
          ];
+         
+       
+
 
          // 마커 이미지의 이미지 주소입니다
-         var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png"; 
-             
+         var imageSrc = ["https://cdn-icons-png.flaticon.com/128/11020/11020536.png",//관광지1,
+        	 "https://cdn-icons-png.flaticon.com/128/11020/11020470.png",//음식점
+        	 "https://cdn-icons-png.flaticon.com/128/11020/11020536.png",//관광지2
+        	 "https://cdn-icons-png.flaticon.com/128/11020/11020485.png",//카페
+        	 "https://cdn-icons-png.flaticon.com/128/11020/11020470.png"//음식점2
+         ];//관광지2
          for (var i = 0; i < positions.length; i ++) {
+         var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">' + 
+         '    <div class="info">' + 
+         '            <a href="Event_view?id='+ positions[i].number +'">'+
+         '        <div class="title">' + [i+1 ]+". "+
+         positions[i].title + 
+         '        </div>' + 
+         '</a>' +
+         '    </div>' +    
+         '</div>';
              
              // 마커 이미지의 이미지 크기 입니다
-             var imageSize = new kakao.maps.Size(24, 35); 
+             var imageSize = new kakao.maps.Size(50, 50); 
              
              // 마커 이미지를 생성합니다    
-             var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); 
+             var markerImage = new kakao.maps.MarkerImage(imageSrc[i], imageSize); 
              
              // 마커를 생성합니다
              var marker = new kakao.maps.Marker({
@@ -213,11 +240,22 @@
                  title : positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
                  image : markerImage // 마커 이미지 
              });
+             var overlay = new kakao.maps.CustomOverlay({
+            	 content: content,
+            	 map: map,
+            	 position: positions[i].latlng      
+            	});
+          
          }
+       
          var linePath;
          var lineLine = new daum.maps.Polyline();
+      
          var distance;
+      
          var totalDistance = 0; // 총 거리를 저장할 변수를 초기화합니다.
+       
+         var subtotalDistance =0;
          for (var i = 0; i < positions.length; i++) {
              if (i != 0) {
                  linePath = [ positions[i - 1].latlng, positions[i].latlng ] //라인을 그리려면 두 점이 있어야하니깐 두 점을 지정했습니다
@@ -229,24 +267,28 @@
                  map : map, // 선을 표시할 지도입니다 
                  path : linePath,
                  strokeWeight : 3, // 선의 두께입니다 
-                 strokeColor : '#ffe576', // 선의 색깔입니다
-                 strokeOpacity : 1, // 선의 불투명도입니다 0에서 1 사이값이며 0에 가까울수록 투명합니다
-                 strokeStyle : 'solid' // 선의 스타일입니다
+                 strokeColor : '#Ef564b', // 선의 색깔입니다
+                 strokeOpacity : 0.8, // 선의 불투명도입니다 0에서 1 사이값이며 0에 가까울수록 투명합니다
+                 strokeStyle : 'longdash' // 선의 스타일입니다
              });
-      	
+       
+      
              distance = Math.round(lineLine.getLength());
              displayCircleDot(positions[i].latlng, distance);
+             totalDistance += distance;
             
-           
+           	
+              
          }
-      
+
+         
          function displayCircleDot(position, distance) {
              if (distance > 0) {
                  // 클릭한 지점까지의 그려진 선의 총 거리를 표시할 커스텀 오버레이를 생성합니다
                  var distanceOverlay = new daum.maps.CustomOverlay(
                          {
-//                              content : '<div class="dotOverlay bg-white rounded-4 px-3 mt-5">거리 <span class="number">'
-//                                    + distance + '</span>m</div>', 
+                             //  content : '<div class="dotOverlay bg-white rounded-4 px-3 mt-5">거리 <span class="number">'
+                              //       + distance + '</span>m</div>', 
                              position : position,
                              yAnchor : 1,
                              zIndex : 2
@@ -255,10 +297,9 @@
                  // 지도에 표시합니다
                  distanceOverlay.setMap(map);
              }
-            
              
          }
-        
+      
 
          
     </script>
