--- a/src/main/resources/templates/thymeleaf/info/Event_write_update.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_write_update.html
@@ -18,11 +18,12 @@
 						
 						<div class="col-12">여행정보 글 이미지 미리보기</div>
 						<div class="form-floating mt-3">
-						<div class="col-12 text-start">이미지(수정시 재등록 필수***)</div>
+						<div class="col-12 text-start"></div>
 							<input
 							type='file' class="form-control pt-3" onchange="readURL(this);"
 							name="Event_thumbnail" th:value="*{Event_thumbnail}"/>
 							</div>
+							<input type="hidden" th:value="*{Event_thumbnail}" name="Event_thumbnail_old">
 					</div>
 					<div class="col-12">
 						<div class="form-floating">
